grammars/sail/grammar.js
    source_file: $ => repeat($.def),

    // Lexical tokens
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_']*/,
    
    number: $ => /[0-9]+/,
    
    id: $ => choice(
      $.identifier,
      seq('operator', choice($.operator, '-', '|', '^', '*')),
    ),
    
    postfix_typ: $ => $.atomic_typ,

    typ_no_caret: $ => prec.left(seq(
      optional($.prefix_typ_op),
      $.postfix_typ,
      repeat(seq($.op_no_caret, optional($.prefix_typ_op), $.postfix_typ)),
    )),

    typ: $ => choice(
      seq('if', field('condition', $.infix_typ), 'then', field('then', $.infix_typ), 'else', field('else', $.typ)),
      $.infix_typ,
    ),

    infix_typ: $ => prec.left(seq(
      optional($.prefix_typ_op),
      $.postfix_typ,
      repeat(seq($.op, optional($.prefix_typ_op), $.postfix_typ)),
    )),

    atomic_typ: $ => choice(
      $.id,
      '_',
      $.typ_var,
      $.lit,
      'dec',
      'inc',
      seq($.id, $.tyarg),
      seq('register', '(', $.typ, ')'),
      seq('(', $.typ, ')'),
      seq('(', $.typ, ',', $.typ_list, ')'),
      seq('{', $.number, repeat(seq(',', $.number)), '}'),
      seq('{', $.kopt, '.', $.typ, '}'),
      seq('{', $.kopt, ',', $.typ, '.', $.typ, '}'),
    ),

    pat1: $ => prec.left(seq(
      $.atomic_pat,
      repeat(seq($.pat_op, $.atomic_pat)),
    )),

    pat: $ => choice(
      $.pat1,
      seq($.attribute, $.pat),
      seq($.pat1, 'as', $.typ),
    ),

    atomic_pat: $ => choice(
      '_',
      $.lit,
      $.id,
      $.typ_var,
      seq($.id, '(', ')'),
      seq($.id, '[', $.number, ']'),
      seq($.id, '[', $.number, '..', $.number, ']'),
      seq($.id, '(', $.pat_list, ')'),
      seq($.atomic_pat, ':', $.typ_no_caret),
      seq('(', $.pat, ')'),
      seq('(', $.pat, ',', $.pat_list, ')'),
      seq('[', $.pat_list, ']'),
      seq('[|', '|]'),
      seq('[|', $.pat_list, '|]'),
      seq('struct', optional($.id), '{', $.fpat_list, '}'),
    ),

    lit: $ => choice(
      'true',
      'false',
      '()',
      $.number,
      'undefined',
      'bitzero',
      'bitone',
      $.binary_literal,
      $.hexadecimal_literal,
      $.string_literal,
    ),

    // Expressions
    exp: $ => choice(
      $.exp0,
      seq($.attribute, $.exp),
      prec.right(PREC.ASSIGN, seq($.exp0, '=', $.exp)),
      seq('let', $.letbind, 'in', $.exp),
      seq('var', $.atomic_exp, '=', $.exp, 'in', $.exp),
      seq('{', $.block, '}'),
      seq('return', $.exp),
      seq('throw', $.exp),
      prec.right(seq('if', $.exp, 'then', $.exp, 'else', $.exp)),
      prec.right(seq('if', $.exp, 'then', $.exp)),
      seq('match', $.exp, '{', $.case_list, '}'),
      seq('try', $.exp, 'catch', '{', $.case_list, '}'),
      seq('foreach', '(', $.id, $.identifier, $.atomic_exp, $.identifier, $.atomic_exp, 'by', $.atomic_exp, 'in', $.typ, ')', $.exp),
      seq('foreach', '(', $.id, $.identifier, $.atomic_exp, $.identifier, $.atomic_exp, 'by', $.atomic_exp, ')', $.exp),
      seq('foreach', '(', $.id, $.identifier, $.atomic_exp, $.identifier, $.atomic_exp, ')', $.exp),
      seq('repeat', optional(seq('termination_measure', '{', $.exp, '}')), $.exp, 'until', $.exp),
      seq('while', optional(seq('termination_measure', '{', $.exp, '}')), $.exp, 'do', $.exp),
    ),

    exp0: $ => prec.left(seq(
      optional($.prefix_op),
      $.atomic_exp,
      repeat(seq($.exp_op, optional($.prefix_op), $.atomic_exp)),
    )),

    letbind: $ => seq($.pat, '=', $.exp),

    atomic_exp: $ => choice(
      seq($.atomic_exp, ':', $.atomic_typ),
      seq('config', $.identifier),
      $.lit,
      seq($.id, '->', $.id, '(', ')'),
      seq($.id, '->', $.id, '(', $.exp_list, ')'),
      seq($.atomic_exp, '.', $.id, '(', ')'),
      seq($.atomic_exp, '.', $.id, '(', $.exp_list, ')'),
      seq($.atomic_exp, '.', $.id),
      $.id,
      $.typ_var,
      seq('ref', $.id),
      seq($.id, '(', ')'),
      seq($.id, '(', $.exp_list, ')'),
      seq('sizeof', '(', $.typ, ')'),
      seq('constraint', '(', $.typ, ')'),
      seq($.atomic_exp, '[', $.exp, ']'),
      seq($.atomic_exp, '[', $.exp, '..', $.exp, ']'),
      seq($.atomic_exp, '[', $.exp, ',', $.exp, ']'),
      seq('struct', optional($.id), '{', $.fexp_exp_list, '}'),
      seq('{', $.exp, 'with', $.fexp_exp_list, '}'),
      seq('[', ']'),
      seq('[', $.exp_list, ']'),
      seq('[', $.exp, 'with', $.vector_update_list, ']'),
      seq('[|', '|]'),
      seq('[|', $.exp_list, '|]'),
      seq('(', $.exp, ')'),
      seq('(', $.exp, ',', $.exp_list, ')'),
    ),

    funcl_patexp_typ: $ => choice(
      seq($.pat, '=', $.exp),
      seq($.pat, '->', $.typ, '=', $.exp),
      seq('forall', $.quantifier, '.', $.pat, '->', $.typ, '=', $.exp),
      seq('(', $.pat, 'if', $.exp, ')', '=', $.exp),
      seq('(', $.pat, 'if', $.exp, ')', '->', $.typ, '=', $.exp),
      seq('forall', $.quantifier, '.', '(', $.pat, 'if', $.exp, ')', '->', $.typ, '=', $.exp),
    ),

    funcls: $ => choice(
      seq($.funcl_annotation, $.id, $.funcl_patexp_typ),
      seq($.id, $.funcl_patexp_typ),
      seq($.funcl_annotation, $.id, $.funcl_patexp, 'and', $.funcl, repeat(seq('and', $.funcl))),
      seq($.id, $.funcl_patexp, 'and', $.funcl, repeat(seq('and', $.funcl))),
    ),

    type_def: $ => choice(
      seq('type', $.id, $.typaram, '=', $.typ),
      seq('type', $.id, '=', $.typ),
      seq('type', $.id, $.typaram, '->', $.kind, '=', $.typ),
      seq('type', $.id, ':', $.kind, '=', $.typ),
      seq('type', $.id, ':', $.kind, optional(seq('=', 'config', $.identifier, repeat(seq('.', $.identifier))))),
      seq('struct', $.id, '=', '{', $.struct_fields, '}'),
      seq('struct', $.id, $.typaram, '=', '{', $.struct_fields, '}'),
      seq('enum', $.id, '=', $.id, repeat(seq('|', $.id))),
      seq('enum', $.id, '=', '{', $.enum_comma, '}'),
      seq('enum', $.id, 'with', $.enum_functions, '=', '{', $.enum_comma, '}'),
      seq('union', $.id, '=', '{', $.type_unions, '}'),
      seq('union', $.id, $.typaram, '=', '{', $.type_unions, '}'),
      seq('bitfield', $.id, ':', $.typ, '=', '{', $.r_def_body, '}'),
    ),

    fun_def: $ => seq('function', optional($.rec_measure), $.funcls),

    // Mapping patterns
    mpat: $ => choice(
      prec.left(seq($.atomic_mpat, repeat(seq($.pat_op, $.atomic_mpat)))),
      seq($.atomic_mpat, 'as', $.id),
    ),

    atomic_mpat: $ => choice(
      $.lit,
      $.id,
      seq($.id, '[', $.number, ']'),
      seq($.id, '[', $.number, '..', $.number, ']'),
      seq($.id, '(', ')'),
      seq($.id, '(', $.mpat_list, ')'),
      seq('(', $.mpat, ')'),
      seq('(', $.mpat, ',', $.mpat_list, ')'),
      seq('[', $.mpat_list, ']'),
      seq('[|', '|]'),
      seq('[|', $.mpat_list, '|]'),
      seq($.atomic_mpat, ':', $.typ_no_caret),
      seq('struct', optional($.id), '{', $.fmpat_list, '}'),
    ),

    mpexp: $ => choice(
      $.mpat,
      seq($.mpat, 'if', $.exp),
    ),

    mapcl: $ => choice(
      seq($.attribute, $.mapcl),
      $.mapcl0,
      seq($.mapcl0, 'when', $.exp),
    ),

    mapcl0: $ => choice(
      seq($.mpexp, '<->', $.mpexp),
      seq($.mpexp, '=>', $.exp),
      seq('forwards', $.case),
      seq('backwards', $.case),
    ),

    mapcl_list: $ => choice(
      seq($.mapcl, optional(',')),
      seq($.mapcl, ',', $.mapcl_list),
    ),

    map_def: $ => choice(
      seq('mapping', $.id, '=', '{', $.mapcl_list, '}'),
      seq('mapping', $.id, ':', $.typschm, '=', '{', $.mapcl_list, '}'),
    ),

    // Let definitions
    let_def: $ => seq('let', $.letbind),

    // Pure/impure annotations
    register_def: $ => choice(
      seq('register', $.id, ':', $.typ),
      seq('register', $.id, ':', $.typ, '=', $.exp),
    ),

    // Default definitions
    def_aux: $ => choice(
      $.fun_def,
      $.map_def,
      $.fixity_def,
      $.val_spec_def,
      $.instantiation_def,
      $.type_def,
      $.let_def,
      $.register_def,
      $.overload_def,
      $.scattered_def,
      $.default_def,
      seq('constraint', $.typ),
      seq('type', 'constraint', $.typ),
      seq('structured$', $.identifier, optional(seq($.attribute_data_key_value, repeat(seq(',', $.attribute_data_key_value)))), '}'),
      $.line_directive,
      seq('termination_measure', $.id, $.pat, '=', $.exp),
      seq('termination_measure', $.id, $.loop_measure, repeat(seq(',', $.loop_measure))),
    ),

    def: $ => choice(
      seq('Private', $.def),
      seq($.attribute, $.def),
      $.def_aux,
    ),
  }
});
